<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_bill_amount"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/billAmountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bill_amount_hint"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/tipPercentageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_tip_percentage"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/tipPercentageRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/tenPercentRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10%" />

        <RadioButton
            android:id="@+id/fifteenPercentRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15%" />

        <RadioButton
            android:id="@+id/twentyPercentRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20%" />

    </RadioGroup>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_tip"/>

    <TextView
        android:id="@+id/tipAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount_label"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/totalAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount_label"
        android:textSize="18sp"/>

</LinearLayout>
